manual drop of unused variables/parameters